test/pos/schema-with-layer.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name base-schema-with-layer

document
  field name required
    scalar string

layer
  name extension-v1
  root
    field email required
      scalar string
    field active
      flag
