test/neg/e207-duplicate-layer-name.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name e207-test

document
  field foo required
    scalar string

layer
  name same-name
  root
    field a required
      scalar string

layer
  name same-name
  root
    field b required
      scalar string
